# libmediasoupclient

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.md  README.md  TODO.md  gulpfile.js  package.json  version.hpp.in
include/: Consumer.hpp  DataConsumer.hpp  DataProducer.hpp  Device.hpp  Exception.hpp  Handler.hpp  Logger.hpp  MediaSoupClientErrors.hpp  PeerConnection.hpp  Producer.hpp  Transport.hpp  Utils.hpp  VideoLayers.hpp  mediasoup-client.hpp  mediasoupclient.hpp  ortc.hpp  scalabilityMode.hpp  version.hpp
include/sdp/: MediaSection.hpp  RemoteSdp.hpp  Utils.hpp
node_utils/: package.json
scripts/: clang-tidy.py  common.sh  format.sh  get-dep.sh  run-test.sh  test.sh  tidy.sh
src/: Consumer.cpp  DataConsumer.cpp  DataProducer.cpp  Device.cpp  Handler.cpp  Logger.cpp  PeerConnection.cpp  Producer.cpp  Transport.cpp  mediasoupclient.cpp  ortc.cpp  scalabilityMode.cpp
src/sdp/: MediaSection.cpp  RemoteSdp.cpp  Utils.cpp
test/: AudioDeviceDummy.hpp  AudioMixerDummy.hpp  AudioProcessingDummy.hpp  CMakeLists.txt  Device.test.cpp  FakeTransportListener.hpp  FakeVideoCapturer.cpp  Handler.test.cpp  Info.plist  PeerConnection.test.cpp  Transport.test.cpp  VcmCapturer.hpp  VideoCapturer.cpp  VideoCapturer.hpp  mediasoupclient.test.cpp  ortc.test.cpp  peerConnectionUtils.cpp  scalabilityMode.test.cpp  tests.cpp
test/data/: parameters.cpp  parameters.hpp
test/include/: FakeTransportListener.hpp  MediaStreamTrackFactory.hpp  MediaTrackFactory.hpp  VcmCapturer.hpp  VideoCapturer.hpp  fakeParameters.hpp  helpers.hpp  parameters.hpp  peerConnectionUtils.hpp
test/sdp/: RemoteSdp.test.cpp  Utils.test.cpp
test/sdp/data/: audio_video.sdp  webrtc.sdp
test/src/: Device.test.cpp  FakeVideoCapturer.cpp  Handler.test.cpp  MediaStreamTrackFactory.cpp  MediaTrackFactory.cpp  PeerConnection.test.cpp  RemoteSdp.test.cpp  SdpUtils.test.cpp  VcmCapturer.cpp  VideoCapturer.cpp  fakeParameters.cpp  mediasoupclient.test.cpp  ortc.test.cpp  parameters.cpp  peerConnectionUtils.cpp  scalabilityMode.test.cpp  tests.cpp
utils/: package.json
utils/clang/: cr_build_revision
